<resources>
    <string name="app_name">My Application</string>
    <string name="title_home">홈</string>
    <string name="title_purchase">구매하기</string>
    <string name="title_wish">위시리스트</string>
    <string name="title_bag">장바구니</string>
    <string name="title_profile">프로필</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_discover">Discover</string>
    <string name="home_date_format">9월 4일 목요일</string>
    <string name="home_logo">Logo</string>
    <string name="bag_description">bag</string>
    <string name="bag_text_empty">장바구니가 비어 있습니다.</string>
    <string name="bag_text_add">제품을 추가하면 여기에 표시됩니다.</string>
    <string name="bag_text_order">주문하기</string>
    <string name="shop_text_wrap">전체</string>
    <string name="shop_text_tops_shirts"><![CDATA[Tops & T-Shirts]]></string>
    <string name="shop_text_shoes">Shoes</string>
    <string name="profile_text_edit">프로필 수정</string>
    <string name="wishlist_wish">위시리스트</string>
    <string name="home_text_nike">나이키 최신 상품</string>
    <string name="item_content">상품 이미지</string>
    <string name="item_shop_product">상품 이미지</string>
    <string name="item_shop_wish">위시리스트</string>
    <string name="home_whats_new">What\'s new</string>
    <string name="Tops_text"><![CDATA[Tops & T-Shirts]]></string>
    <string name="Sale_text">Sale</string>
    <string name="profile_nickName">닉네임</string>
    <string name="profile_order">주문</string>
    <string name="profile_pass">패스</string>
    <string name="profile_event">이벤트</string>
    <string name="profile_setting">설정</string>
    <string name="profile_nike_member">나이키 멤버 혜택</string>
    <string name="profile_nike_0">0개 사용 가능</string>
    <string name="profile_following">팔로잉 (3)</string>
    <string name="profile_edit">편집</string>
    <string name="profile_join">회원 가입일: 2025년 9월</string>

</resources>